CHANGE: Plug  | Added full set of config parameter methods for completeness [amc1]

BUGFIX: Plug  | UPnP plugin now correctly attempts to remove existing mappings if they are in the way of new mappings [amc1]
BUGFIX: Core  | Fix Re-adding a torrent causing "1-" or "-1" directories or files [TuxPaper]
BUGFIX: Plug  | Fixed bug where some plugin menu items didn't appear under certain conditions [amc1]


2007.01.22 | Azureus 2.5.0.4 / 3.0.0.6

FEATURE: Core | New users default save directory is now located in their "My Documents" directory, under "Azureus Downloads" [TuxPaper]
FEATURE: Core | Show alerts raised during closedown on next start as these often don't get displayed due to UI shutdown [Parg]
FEATURE: Core | Allow plugin installs to place jars into the plugin-shared "shared/lib" directory [Parg]
FEATURE: Plug | Unsafe config read/writing [parg]
FEATURE: Plug | Plugins can now open and close download bars [amc1]

CHANGE: Core  | Added scrape delay for stopped/errored torrents, and torrents with high share ratios [TuxPaper]
CHANGE: Core  | Allow only one active scrape for each tracker [TuxPaper]
CHANGE: Core  | Release piece-map when not required [Parg]
CHANGE: Core  | ASN lookup via DNS queries only [Parg]
CHANGE: Core  | Full recheck of torrent when part of torrent fails hash check on completion [TuxPaper]
CHANGE: Core  | Take note of banned IPs when we have IP filter turned off - these are independent [Parg]
CHANGE: Core  | Disable download peer caching for private torrents [Parg]
CHANGE: Core  | Disconnect currently connected peers on tracker URL change for private torrents [Parg]
CHANGE: Core  | Remove unused download/upload specific stats from version-check message [Parg]
CHANGE: Core  | Include IP override in NAT check message for NAT check server to use [Parg]
CHANGE: Plug  | Timeout UPnP port releases during closedown to prevent Azureus hanging [Parg]

BUGFIX: Core  | Fix choke/unchoke cycle bug for lan local peers [Nolar]